# centralized-notification-panel

./: README.md  docker-compose.yml  init.sql
frontend/: Dockerfile
frontend/src/: App.js
frontend/src/pages/: Authentication.js  Detail.js  Form.css  Form.js  FormType.js  Home.css  Home.js  RegAndAuth.css  Registration.js  RoomDetail.css  RoomDetail.js
serverAPI/: CMakeLists.txt  Dockerfile  RESTAPI.h  configDB.json  main.cpp  rest_api.cpp
server_python/: config.json  init.sql  server.py
